Install web3 js

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.4",
-    "web-vitals": "2.1.2"
+    "web-vitals": "2.1.2",
+    "web3": "1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
